Added resource, service and mapper. Added the related tests.