@@ -1,15 +1,5 @@
 package se.sundsvall.supportmanagement.integration.db.model;
 
-import com.google.code.beanmatchers.BeanMatchers;
-import org.junit.jupiter.api.BeforeAll;
-import org.junit.jupiter.api.Test;
-import org.mariadb.jdbc.MariaDbBlob;
-
-import java.time.OffsetDateTime;
-import java.util.List;
-import java.util.Random;
-import java.util.UUID;
-
 import static com.google.code.beanmatchers.BeanMatchers.hasValidBeanConstructor;
 import static com.google.code.beanmatchers.BeanMatchers.hasValidBeanEquals;
 import static com.google.code.beanmatchers.BeanMatchers.hasValidBeanHashCode;
@@ -21,6 +11,16 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.within;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.core.AllOf.allOf;
+
+import java.time.OffsetDateTime;
+import java.util.List;
+import java.util.Random;
+import java.util.UUID;
+
+import com.google.code.beanmatchers.BeanMatchers;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Test;
+import org.mariadb.jdbc.MariaDbBlob;
 
 
 class ErrandEntityTest {
@@ -66,6 +66,7 @@ class ErrandEntityTest {
 		final var type = "type";
 		final var escalationEmail = "escalation@email.com";
 		final var errandNumber = "errandNumber";
+		final var parameters = List.of(ParameterEntity.create());
 
 		final var errandEntity = ErrandEntity.create()
 			.withAssignedGroupId(assignedGroupId)
@@ -87,6 +88,7 @@ class ErrandEntityTest {
 			.withTitle(title)
 			.withTouched(touched)
 			.withType(type)
+			.withParameters(parameters)
 			.withEscalationEmail(escalationEmail)
 			.withErrandNumber(errandNumber);
 
@@ -110,6 +112,7 @@ class ErrandEntityTest {
 		assertThat(errandEntity.getTitle()).isEqualTo(title);
 		assertThat(errandEntity.getTouched()).isEqualTo(touched);
 		assertThat(errandEntity.getType()).isEqualTo(type);
+		assertThat(errandEntity.getParameters()).isEqualTo(parameters);
 		assertThat(errandEntity.getEscalationEmail()).isEqualTo(escalationEmail);
 		assertThat(errandEntity.getErrandNumber()).isEqualTo(errandNumber);
 	}
@@ -120,7 +123,7 @@ class ErrandEntityTest {
 		entity.onCreate();
 
 		assertThat(entity.getCreated()).isCloseTo(now(), within(1, SECONDS));
-		assertThat(entity.getStakeholders().get(0).getErrandEntity()).isSameAs(entity);
+		assertThat(entity.getStakeholders().getFirst().getErrandEntity()).isSameAs(entity);
 		assertThat(entity).hasAllNullFieldsOrPropertiesExcept("created", "stakeholders");
 	}
 
@@ -130,7 +133,7 @@ class ErrandEntityTest {
 		entity.onUpdate();
 
 		assertThat(entity.getModified()).isCloseTo(now(), within(1, SECONDS));
-		assertThat(entity.getStakeholders().get(0).getErrandEntity()).isSameAs(entity);
+		assertThat(entity.getStakeholders().getFirst().getErrandEntity()).isSameAs(entity);
 		assertThat(entity).hasAllNullFieldsOrPropertiesExcept("modified", "stakeholders");
 	}
 
